tests/lang/errors/fault_type_mismatch.hawk
//! spec: fault-type-mismatch
//! mode: run

fn main() -> Int {
    // A list-literal tail is not yet checked, so this infers `List<Int>` and
    // checks clean — a type hole. At runtime the second element is a `String`,
    // so using it as an `Int` traps. The message is an honest *runtime type
    // error* (the checker was too lenient), not an "internal error", and it
    // names the types.
    let xs = [1, 'two'];
    let sum = xs[1] + 0;   // expect trap: runtime type error: expected Int, found String
    println('${sum}');
    return 0;
}
